Link to archive.html instead of just archive.

--- a/templates/blog_home.html
+++ b/templates/blog_home.html
@@ -1,6 +1,6 @@
 [[=header.html]]
 [[@content_html]]
 
-<p><a href=archive>Archive</a></p>
+<p><a href=archive.html>Archive</a></p>
 
 [[=footer.html]]
